# substrate_fcihpy

./: Cargo.toml  pallet通用模块.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  test.rs  tests.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  test.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
