[package]
name = "ocw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

categories = [
    "pallet",
    "offchain worker"
]

[dependencies]
parking_lot = "0.12.1"
parity-scale-codec = { default-features = false, features = ['derive'], version = '2.3.1'}
serde = {version = '1.0.145', default-features = false, features = ['derive']}
serde_json = {version = '1.0.86', default-features = false, features = ['alloc']}
log = {version = '0.4.17', default-features = false}

scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-arithmetic = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }



[features]
default = ['std']
std = [
    'frame-support/std',
    'frame-system/std',
    'parity-scale-codec/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-arithmetic/std',
    'log/std'
]
try-runtime = ["frame-support/try-runtime"]